# clippy

./: .gitignore  embedder.py  example.json  pyproject.toml  trainer.ipynb
